fix issue on ios

--- a/src/app/components/banner/banner.component.tns.scss
+++ b/src/app/components/banner/banner.component.tns.scss
@@ -1,11 +1,11 @@
 /* Add mobile styles for the component here.  */
 .banner-title {
     color: #000000;
-    font-size: 22;
+    font-size: 20;
     font-weight: bold;
 }
 .banner-subtitle {
     color: #a3080c;
-    font-size: 18;
+    font-size: 15;
     text-align: right;
 }
