--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -8,7 +8,6 @@
 	margin: 0;
 	.text {
 		margin-top: 20;
-		margin-bottom: 40;
 	}
 }
 .widget-point {
